Optimizations as suggested by IG.